--- a/catalog/templates/catalog/includes/inc_futer.html
+++ b/catalog/templates/catalog/includes/inc_futer.html
@@ -7,7 +7,7 @@
                 <h5>Категории</h5>
                 <ul class="list-unstyled text-small">
                     {% for category in category_list %}
-                    <li><a class="text-muted" href="#">{{ category.name }}</a></li>
+                    <li><a class="text-muted" href="/category/{{ category.pk }}">{{ category.name }}</a></li>
                     {% endfor %}
                 </ul>
             </div>
