Update product.html dz 20.2

--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -8,5 +8,6 @@
         <p class="lead">Категория: {{ product.category }}</p>
         <p class="lead">Цена: {{ product.price }}</p>
         <p class="lead">Создан: {{ product.created_at}}</p>
+        <p class="lead">Обновлен: {{ product.updated_at }}</p>
     </div>
 {% endblock %}
