--- a/catalog/templates/catalog/includes/inc_header.html
+++ b/catalog/templates/catalog/includes/inc_header.html
@@ -1,5 +1,5 @@
     <h5 class="my-0 mr-md-auto font-weight-normal">Skystore</h5>
     <nav class="ms-5">
-        <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:index' %}">Каталог</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:index' %}">Главная</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:contacts' %}">Контакты</a>
     </nav>
