--- a/catalog/templates/catalog/includes/product_card.html
+++ b/catalog/templates/catalog/includes/product_card.html
@@ -1,6 +1,6 @@
 <div class="col-3">
-    <a style="display: block;text-decoration: none;" href="/product/{{ product.pk }}">
-        <div class="card mb-4 box-shadow">
+    <a style="display: block;text-decoration: none;" href="{% url 'catalog:product_info' product.pk %}">
+        <div class="card  box-shadow h-100">
             <div class="card-header">
                 <h4 class="my-0 font-weight-normal">{{ product.name }}</h4>
             </div>
@@ -10,7 +10,7 @@
                     <li>- {{ product.description|truncatechars:100 }}</li>
 
                 </ul>
-                <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+                <button  type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
             </div>
         </div>
     </a>
