--- a/catalog/templates/catalog/people_form.html
+++ b/catalog/templates/catalog/people_form.html
@@ -6,22 +6,24 @@
     <div class="row text-start">
         <div class="col-lg-9 col-md-6 col-sm-12">
             <div class="card mb-4 box-shadow">
+                {% for contacts in view.view_contacts %}
                 <div class="card-body">
                     <table class="table table-striped">
                         <tr>
                             <td class="w-25">Страна</td>
-                            <td>USA</td>
+                            <td>{{ contacts.country }}</td>
                         </tr>
                         <tr>
                             <td class="w-25">ИНН</td>
-                            <td>91-1144442</td>
+                            <td>{{ contacts.inn }}</td>
                         </tr>
                         <tr>
                             <td class="w-25">Адрес</td>
-                            <td>Redmond,WA,98052-6399</td>
+                            <td>{{ contacts.address }}</td>
                         </tr>
                     </table>
                 </div>
+                {% endfor %}
             </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12">
