--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -5,7 +5,7 @@
         <p class="lead">Skystore - это отличный вариант хранения ваших плагинов и примеров кода, который вы бы хотели
             продать</p>
     </div>
-    <div class="row text-center">
+    <div class="row row-cols-1 row-cols-md-4 g-5">
 
         {% for product in product_list %}
 
