--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -20,7 +20,7 @@
                                 </span>
                             </a>
                         </p>
-                        <p class="lead">Цена: <span class="text-success">{{ product.price }}</span></p>
+                        <p class="lead">Цена: <span class="text-success">{{ product.price }} Руб</span></p>
                         <p class="lead">Создан: {{ product.created_at|date:"d M Y H:i" }}</p>
                         <p class="lead">Обновлен: {{ product.updated_at|date:"d M Y H:i" }}</p>
                     </div>
