--- a/catalog/templates/catalog/includes/inc_futer.html
+++ b/catalog/templates/catalog/includes/inc_futer.html
@@ -7,7 +7,7 @@
         <h5>Категории</h5>
         <ul class="list-unstyled text-small">
             {% for category in category_list %}
-                <li><a class="text-muted" href="{% url 'catalog:category_info' category.pk %}">{{ category.name }}</a>
+                <li><a class="text-muted" href="{% url 'catalog:category_detail' category.pk %}">{{ category.name }}</a>
                 </li>
             {% endfor %}
         </ul>
