--- a/catalog/templates/catalog/includes/product_card.html
+++ b/catalog/templates/catalog/includes/product_card.html
@@ -8,7 +8,7 @@
             <h3>Цена: {{ product.price }} руб</h3>
         </div>
         <div class=" text-center mb-3 mt-2">
-            <a href="{% url 'catalog:product_info' product.pk %}">
+            <a href="{% url 'catalog:detail' product.pk %}">
                 <button type="button" class="btn btn-lg btn-block btn-outline-primary">подробнее</button>
             </a>
         </div>
