--- a/catalog/templates/catalog/object_confirm_delete.html
+++ b/catalog/templates/catalog/object_confirm_delete.html
@@ -1,6 +1,9 @@
 {% extends 'catalog/base.html' %}
 {% load my_media %}
 {% block content %}
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">Удаление {{ object.name }}</h1>
+    </div>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
