--- a/blog/templates/blog/blogentry_form.html
+++ b/blog/templates/blog/blogentry_form.html
@@ -3,6 +3,6 @@
 {% block content %}
     <form method="post" enctype="multipart/form-data">  {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Сохранить</button>
+        <button type="submit" class="btn btn-outline-primary">Сохранить</button>
     </form>
 {% endblock %}
