--- a/catalog/templates/catalog/object_form.html
+++ b/catalog/templates/catalog/object_form.html
@@ -4,6 +4,6 @@
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Сохранить</button>
+        <button type="submit" class="btn btn-outline-primary">Сохранить</button>
     </form>
 {% endblock %}
