--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -23,8 +23,8 @@
                         <p class="lead">Цена: <span class="text-success">{{ product.price }} Руб</span></p>
                         <p class="lead">Создан: {{ product.created_at|date:"d M Y H:i" }}</p>
                         <p class="lead">Обновлен: {{ product.updated_at|date:"d M Y H:i" }}</p>
-                        <a href="{% url 'catalog:update' product.pk %}" class="btn btn-primary">Редактировать</a>
-                        <a href="{% url 'catalog:delete' product.pk %}" class="btn btn-primary">Удалить</a>
+                        <a href="{% url 'catalog:update' product.pk %}" class="btn btn-outline-primary">Редактировать</a>
+                        <a href="{% url 'catalog:delete' product.pk %}" class="btn btn-outline-danger">Удалить</a>
                     </div>
                 </div>
             </div>
