Внешний вид форм и кнопочек

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -17,7 +17,7 @@
                         <p class="card-text">{{ blog.contents|truncatechars:100 }}</p>
                     </div>
                     <div class="card-footer text-center">
-                        <a href="{% url 'blog:detail' blog.slug %}" class="btn btn-primary">Открыть статью</a>
+                        <a href="{% url 'blog:detail' blog.slug %}" class="btn btn-lg btn-block btn-outline-primary">Открыть статью</a>
                     </div>
                 </div>
 
