--- a/blog/templates/blog/blogentry_detail.html
+++ b/blog/templates/blog/blogentry_detail.html
@@ -15,8 +15,8 @@
             <p class="card-text"><small class="text-muted">Написана: {{ blogentry.created_at }}</small></p>
             <p class="card-text"><small class="text-muted">Изменена: {{ blogentry.updated_at }}</small></p>
             <p class="card-text"><small class="text-muted">Просмотры: {{ blogentry.views }}</small></p>
-            <a href="{% url 'blog:update' blogentry.slug %}" class="btn btn-primary">Редактировать статью</a>
-            <a href="{% url 'blog:delete' blogentry.slug %}" class="btn btn-primary">Удалить статью</a>
+            <a href="{% url 'blog:update' blogentry.slug %}" class="btn btn-outline-primary">Редактировать статью</a>
+            <a href="{% url 'blog:delete' blogentry.slug %}" class="btn btn-outline-danger">Удалить статью</a>
         </div>
     </div>
 {% endblock %}
