настройка работы с пользователями функционал : 1. юзер может удалять, редактировать только свои продукты/категории/статьи 2. есть защита как во вьюшках так и в шаблонах 3. при попытке создать что-то новое редирект на вход или регистрацию 4. можно редактировать свой профиль 5. также у каждого продукта/категории/статьи выводится автор 6. кнопки регистрации авторизации динамически показываются в зависимости какой пользователь сейчас на сайте
ну и так мелочи

в процессе доработка по сбросу пароля)

--- a/blog/templates/blog/blogentry_detail.html
+++ b/blog/templates/blog/blogentry_detail.html
@@ -15,8 +15,12 @@
             <p class="card-text"><small class="text-muted">Написана: {{ blogentry.created_at }}</small></p>
             <p class="card-text"><small class="text-muted">Изменена: {{ blogentry.updated_at }}</small></p>
             <p class="card-text"><small class="text-muted">Просмотры: {{ blogentry.views }}</small></p>
-            <a href="{% url 'blog:update' blogentry.slug %}" class="btn btn-outline-primary">Редактировать статью</a>
-            <a href="{% url 'blog:delete' blogentry.slug %}" class="btn btn-outline-danger">Удалить статью</a>
+            <p class="card-text"><small class="text-muted">Автор: {{ blogentry.autor.email }}</small></p>
+            {% if request.user == blogentry.autor %}
+                <a href="{% url 'blog:update' blogentry.slug %}" class="btn btn-outline-primary">Редактировать
+                    статью</a>
+                <a href="{% url 'blog:delete' blogentry.slug %}" class="btn btn-outline-danger">Удалить статью</a>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
