--- a/catalog/templates/catalog/category_detail.html
+++ b/catalog/templates/catalog/category_detail.html
@@ -3,8 +3,11 @@
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">{{ category.name }}</h1>
         <p class="lead">Описание: {{ category.description }}</p>
-        <a href="{% url 'catalog:category_update' category.pk %}" class="btn btn-primary">Редактировать</a>
-        <a href="{% url 'catalog:category_delete' category.pk %}" class="btn btn-primary">Удалить</a>
+        <p class="lead">Автор: {{ category.autor.email }}</p>
+        {% if category.autor == request.user %}
+            <a href="{% url 'catalog:category_update' category.pk %}" class="btn btn-primary">Редактировать</a>
+            <a href="{% url 'catalog:category_delete' category.pk %}" class="btn btn-primary">Удалить</a>
+        {% endif %}
     </div>
     <div class="row row-cols-1 row-cols-md-4 g-5">
         {% for product in product_list %}
