--- a/catalog/templates/catalog/includes/inc_header.html
+++ b/catalog/templates/catalog/includes/inc_header.html
@@ -1,6 +1,14 @@
-    <h5 class="my-0 mr-md-auto font-weight-normal">Skystore</h5>
-    <nav class="ms-5">
-        <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:index' %}">Главная</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:contacts' %}">Контакты</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'auth_users:register' %}">Контакты</a>
-    </nav>
+<h5 class="my-0 mr-md-auto font-weight-normal">Skystore</h5>
+<nav class="ms-5">
+    <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:index' %}">Главная</a>
+    <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:contacts' %}">Контакты</a>
+
+
+    {% if user.is_authenticated %}
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' %}">Профиль</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Выйти</a>
+    {% else %}
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Войти</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
+    {% endif %}
+</nav>
