добавил почту админки на сайте чтоб не лазить в проект
это все лишь для удобства

--- a/catalog/templates/catalog/includes/inc_futer.html
+++ b/catalog/templates/catalog/includes/inc_futer.html
@@ -26,6 +26,7 @@
     </div>
     <div class="col-6 col-md">
         <h5>Заглушка для админки</h5>
+        <h1>admin@example.com</h1>
         <ul class="list-unstyled text-small">
             <li><a class="text-muted" href="{% url 'admin:index' %}">Вход</a></li>
         </ul>
