--- a/catalog/templates/catalog/includes/inc_header.html
+++ b/catalog/templates/catalog/includes/inc_header.html
@@ -5,9 +5,9 @@
 
 
     {% if user.is_authenticated %}
-        <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' %}">Профиль</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' request.user.pk %}">Профиль</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Выйти</a>
     {% else %}
-        <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Войти</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Вход</a>
     {% endif %}
 </nav>
