--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -31,7 +31,7 @@
                         <p class="lead">Автор:
                             <a href="{% url 'users:profile' product.autor.pk %}">
                                 <span class="badge bg-primary">
-                                    {{ product.autor.email }}
+                                    {{ product.autor.first_name }}
                                 </span>
                             </a>
                         </p>
