--- a/users/templates/users/reset_password.html
+++ b/users/templates/users/reset_password.html
@@ -9,6 +9,7 @@
                 <input type="email" class="form-control" id="email"
                        name="email" required autocomplete="email"
                 >
+                <h6 class="mt-2">На указанную почту будет отправлено письмо с новым паролем </h6>
             </div>
             <button type="submit" class="p-2 btn btn-outline-primary">Сбросить</button>
         </form>
