--- a/catalog/templates/catalog/includes/inc_header.html
+++ b/catalog/templates/catalog/includes/inc_header.html
@@ -1,13 +1,23 @@
-<h5 class="my-0 mr-md-auto font-weight-normal">Skystore</h5>
+<figure>
+    <blockquote class="blockquote">
+        <p>Skystore</p>
+    </blockquote>
+    {% if request.user.is_authenticated %}
+    <figcaption class="blockquote-footer">
+        Активная учетная запись: <cite title="Source Title">{{ request.user.first_name }}</cite>
+    </figcaption>
+    {% endif %}
+</figure>
 <nav class="ms-5">
     <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:index' %}">Главная</a>
     <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:contacts' %}">Контакты</a>
 
 
-    {% if user.is_authenticated %}
+    {% if request.user.is_authenticated %}
         <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' request.user.pk %}">Профиль</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Выйти</a>
     {% else %}
         <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Вход</a>
     {% endif %}
+
 </nav>
