--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -13,40 +13,43 @@
                 <p><strong>Имя:</strong> {{ user.first_name }}</p>
                 <p><strong>Фамилия:</strong> {{ user.last_name }}</p>
                 <p><strong>Страна:</strong> {{ user.country }} </p>
-                {% if user == request.user %}
-                    <p><strong>Номер телефона:</strong> {{ user.phone_number }}</p>
-                    <p><strong>Email:</strong> {{ user.email }}</p>
-                    <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile_update' user.pk %}">
-                        Редактировать профиль
-                    </a>
-                {% else %}
-                    <p><strong>Номер телефона:</strong> Доступно только авторизованному пользователю</p>
-                    <p><strong>Email:</strong> Доступно только авторизованному пользователю</p>
-                {% endif %}
+                    {% if user == request.user %}
+                        <p><strong>Номер телефона:</strong> {{ user.phone_number }}</p>
+                        <p><strong>Email:</strong> {{ user.email }}</p>
+                        <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile_update' user.pk %}">
+                            Редактировать профиль
+                        </a>
+                    {% else %}
+                        <p><strong>Номер телефона:</strong> Доступно только владельцу профиля</p>
+                        <p><strong>Email:</strong> Доступно только владельцу профиля</p>
+                    {% endif %}
             </div>
         </div>
+    <div class="text-center mt-3">
+        <h1>Продукты пользователя</h1>
+    </div>
         <div class="mt-5">
             <!-- Карусель -->
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <!-- Динамические карточки товара -->
                     {% for product in user_products %}
-                            <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                                <div class="card">
-                                    <div class="card-body text-center">
-                                        <h5 class="card-title">Название: {{ product.name }}</h5>
-                                        <p class="card-text">
-                                            Описание: {{ product.description|truncatechars:50 }}</p>
-                                        <div>
-                                            <a href="{% url 'catalog:detail' product.pk %}">
-                                                <button type="button" class="btn btn-block btn-outline-primary">
-                                                    Подробнее
-                                                </button>
-                                            </a>
-                                        </div>
+                        <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <h5 class="card-title">Название: {{ product.name }}</h5>
+                                    <p class="card-text">
+                                        Описание: {{ product.description|truncatechars:50 }}</p>
+                                    <div>
+                                        <a href="{% url 'catalog:detail' product.pk %}">
+                                            <button type="button" class="btn btn-block btn-outline-primary">
+                                                Подробнее
+                                            </button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
+                        </div>
                     {% endfor %}
                 </div>
                 <!-- Элементы управления каруселью -->
