--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -25,9 +25,11 @@
                     {% endif %}
             </div>
         </div>
+    {% if user_products %}
     <div class="text-center mt-3">
         <h1>Продукты пользователя</h1>
     </div>
+    {% endif %}
         <div class="mt-5">
             <!-- Карусель -->
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
