--- a/blog/templates/blog/index_moderator.html
+++ b/blog/templates/blog/index_moderator.html
@@ -1,13 +1,12 @@
 {% extends 'catalog/base.html' %}
 {% load my_media %}
 {% block content %}
+    {% if blog.can_edit_publications %}
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">Наш блог</h1>
-        <p class="lead">Тут мы пишем интересные статьи</p>
-        <a href="{% url 'blog:create' %}" class="btn btn-primary">Написать статью</a>
-        {% if blog.can_edit_publications %}
-            <a href="{% url 'blog:moderator' %}" class="btn btn-primary">Снятые с публикации статьи</a>
-        {% endif %}
+        <p class="lead">Снятые с публикации статьи</p>
+        <a href="{% url 'blog:index' %}" class="btn btn-primary">Назад на главную</a>
+
     </div>
     <div class="row row-cols-1 row-cols-md-4 g-5">
         {% for blog in blogentry_list %}
@@ -20,12 +19,12 @@
                         <p class="card-text">{{ blog.contents|truncatechars:100 }}</p>
                     </div>
                     <div class="card-footer text-center">
-                        <a href="{% url 'blog:detail' blog.slug %}" class="btn btn-lg btn-block btn-outline-primary">Открыть
-                            статью</a>
+                        <a href="{% url 'blog:detail' blog.slug %}" class="btn btn-lg btn-block btn-outline-primary">Открыть статью</a>
                     </div>
                 </div>
 
             </div>
         {% endfor %}
     </div>
+    {% endif %}
 {% endblock %}
