--- a/blog/templates/blog/index_moderator.html
+++ b/blog/templates/blog/index_moderator.html
@@ -2,29 +2,30 @@
 {% load my_media %}
 {% block content %}
     {% if blog.can_edit_publications %}
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">Наш блог</h1>
-        <p class="lead">Снятые с публикации статьи</p>
-        <a href="{% url 'blog:index' %}" class="btn btn-primary">Назад на главную</a>
+        <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+            <h1 class="display-4">Наш блог</h1>
+            <p class="lead">Снятые с публикации статьи</p>
+            <a href="{% url 'blog:index' %}" class="btn btn-primary">Назад на главную</a>
 
-    </div>
-    <div class="row row-cols-1 row-cols-md-4 g-5">
-        {% for blog in blogentry_list %}
+        </div>
+        <div class="row row-cols-1 row-cols-md-4 g-5">
+            {% for blog in blogentry_list %}
 
-            <div class="col">
-                <div class="card h-100">
-                    <img src="{{ blog.image|mymedia }}" class="card-img-top" alt="{{ blog.title }}">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ blog.title }}</h5>
-                        <p class="card-text">{{ blog.contents|truncatechars:100 }}</p>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="{{ blog.image|mymedia }}" class="card-img-top" alt="{{ blog.title }}">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ blog.title }}</h5>
+                            <p class="card-text">{{ blog.contents|truncatechars:100 }}</p>
+                        </div>
+                        <div class="card-footer text-center">
+                            <a href="{% url 'blog:detail' blog.slug %}"
+                               class="btn btn-lg btn-block btn-outline-primary">Открыть статью</a>
+                        </div>
                     </div>
-                    <div class="card-footer text-center">
-                        <a href="{% url 'blog:detail' blog.slug %}" class="btn btn-lg btn-block btn-outline-primary">Открыть статью</a>
-                    </div>
+
                 </div>
-
-            </div>
-        {% endfor %}
-    </div>
+            {% endfor %}
+        </div>
     {% endif %}
 {% endblock %}
