--- a/blog/templates/blog/index_moderator.html
+++ b/blog/templates/blog/index_moderator.html
@@ -1,7 +1,7 @@
 {% extends 'catalog/base.html' %}
 {% load my_media %}
 {% block content %}
-    {% if blog.can_edit_publications %}
+    {% if perms.blog.can_edit_publications %}
         <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4">Наш блог</h1>
             <p class="lead">Снятые с публикации статьи</p>
